--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "Token":"MTIwOTUyMzg4MzU3Nzk3MDcwOA.Gwx_kv._DLdyfjHujopWoeVvhkwUd_RbVevHef4rvk9hU",
+  "Token":"DiscordBotToken",
   "BotPrefix":"!"
 }
